Bug 406656 - Bad error message when Discover opens a URL for an app it can't install because the necessary backend isn't installed
Summary: Bad error message when Discover opens a URL for an app it can't install becau...
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: 5.15.4
Platform: Other Linux
: HI normal
Target Milestone: ---
Assignee: Dan Leinir Turthra Jensen
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-04-18 13:31 UTC by Nate Graham
Modified: 2020-12-01 19:19 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2019-04-18 13:31:14 UTC
STEPS TO REPRODUCE
1. Don't install the Snap backend, or uninstall it
2. Open the URL "snap://gwenview"

OBSERVED RESULT
Discover shows a page saying:

Sorry...
Couldn't open snap://Gwenview

EXPECTED RESULT
A page saying something like, "Cannot display snap://Gwenview because support for Snap applications is not installed."

And then there should be a button that installs the backend when you click on it. After the backend is installed, it should attempt to re-open the original URL using the newly-installed backend.
Comment 1 Aleix Pol 2020-12-01 19:19:43 UTC
Git commit c28508fe9b412ce58b5039df160c6f29d74540dd by Aleix Pol.
Committed on 01/12/2020 at 19:18.
Pushed by apol into branch 'master'.

snap: Suggest installing snap support if snap is not installed

M  +3    -0    discover/DiscoverObject.cpp

https://invent.kde.org/plasma/discover/commit/c28508fe9b412ce58b5039df160c6f29d74540dd