snap: Suggest installing snap support if snap is not installed

BUG: 406656